# DESeq2_rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: TODO.md  article.md
docs/superpowers/plans/: 2026-04-12-deseq2-rs-implementation.md
docs/superpowers/specs/: 2026-04-12-deseq2-rs-design.md
rust_deseq2/src/: design.rs  size_factors.rs
rust_deseq2/src/dispersion/: gene_estimate.rs  map_estimate.rs  mod.rs  trend_fit.rs
rust_deseq2/src/glm/: irls.rs  mod.rs
rust_deseq2/src/test_stats/: mod.rs  p_adjust.rs  wald.rs
rust_deseq2/tests/: test_io.rs
rust_deseq2/tests/reference_data/: airway_coldata.tsv  r_design_matrix.tsv  r_disp_gene_estimates.tsv  r_disp_trend_coeffs.tsv  r_dispersions_final.tsv
scripts/: export_r_reference.R
src/: data.rs  io.rs  lib.rs  pipeline.rs  size_factors.rs
src/dispersion/: gene_estimate.rs  map_estimate.rs  trend_fit.rs
src/test_stats/: wald.rs
tests/: test_normalized_counts.rs
tests/reference_data/: r_base_means.tsv  r_beta_coefficients.tsv  r_beta_se.tsv  r_disp_map_estimates.tsv  r_size_factors.tsv
